# dev-skillbox-module30

Task_1/: CMakeLists.txt  Task_1.cpp  Task_1.h
Task_2/: CMakeLists.txt  Task_2.cpp
Task_3/: CMakeLists.txt  Task_3.cpp
